--- a/Calculadora/Calculadora/Views/Home/Index.cshtml
+++ b/Calculadora/Calculadora/Views/Home/Index.cshtml
@@ -7,8 +7,7 @@
    <h4>Exemplificação da interação entre o <i>Cliente</i> e o <i>Servidor</i>.</h4>
 </div>
 
-<form>
-
+<form method="post">
 
   <table border="0"
           style="border-spacing:3px;
@@ -20,7 +19,7 @@
          <td colspan="4">
             <input type="text"
                    name="visor"
-                   value="0"
+                   value= "@ViewBag.visor"
                    readonly="readonly"
                    style="text-align:right;
                           width:167px;"
