Inicio programação operadores

--- a/Calculadora/Calculadora/Views/Home/Index.cshtml
+++ b/Calculadora/Calculadora/Views/Home/Index.cshtml
@@ -8,6 +8,10 @@
 </div>
 
 <form method="post">
+    
+    <input type="hidden" name="PrimeiroOperando" value=""/>
+    <input type="hidden" name="Õperador" value=""/>
+
 
   <table border="0"
           style="border-spacing:3px;
